Reverted formatter application due to huge amount of changes